# GLiner-TransbronchialBiopsy

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/finetuning/: config.yaml  sandbox.ipynb  train.py  train_cross_validation.py  train_overfit_gradient.py
src/finetuning/data/: json_convertissor.py  wait_data.md
src/finetuning/demo/: config.yaml  finetune_demo.ipynb  load_local_model_demo.ipynb  train_demo.py
src/finetuning/run/: config.yaml  train.py  utils.py
src/finetuning/streamlit/: dashboard.py
src/model/: wait_training.md
src/streamlit/: config.toml  dashboard.py  dashboard_v1.py
src/streamlit/app/: app.py  config.py
src/streamlit/app/auth/: user_auth.py
src/streamlit/app/data/: corrections_manager.py  entity_processor.py
src/streamlit/app/models/: model_handler.py
src/streamlit/app/ui/: components.py  styles.py
src/streamlit/app/utils/: file_handler.py  text_processor.py
src/streamlit/app/visualization/: charts.py
src/viz/: graph.py  graph_loss_viz.py  loss.txt
