[tool.poetry]
name = "gliner-transbronchialbiopsy"
version = "0.1.0"
description = ""
authors = ["sarrabenyahia <93934407+sarrabenyahia@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
accelerate = "0.32.1"
transformers = "4.41"
appnope = "^0.1.4"
asttokens = "^2.4.1"
certifi = "^2024.7.4"
charset-normalizer = "^3.3.2"
coloredlogs = "^15.0.1"
comm = "^0.2.2"
debugpy = "^1.8.2"
decorator = "^5.1.1"
executing = "^2.0.1"
filelock = "^3.15.4"
flatbuffers = "^24.3.25"
fsspec = "^2024.6.1"
gliner = "^0.2.8"
huggingface-hub = "^0.24.5"
humanfriendly = "^10.0"
idna = "^3.7"
ipykernel = "^6.29.5"
ipython = "^8.26.0"
jedi = "^0.19.1"
jinja2 = "^3.1.4"
jupyter-client = "^8.6.2"
jupyter-core = "^5.7.2"
markupsafe = "^2.1.5"
matplotlib-inline = "^0.1.7"
mpmath = "^1.3.0"
nest-asyncio = "^1.6.0"
networkx = "^3.3"
numpy = "1.26.4"
onnxruntime = "^1.18.1"
packaging = "^24.1"
parso = "^0.8.4"
pexpect = "^4.9.0"
pillow = "^10.4.0"
platformdirs = "^4.2.2"
prompt-toolkit = "^3.0.47"
protobuf = "^5.27.3"
psutil = "^6.0.0"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
pygments = "^2.18.0"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.1"
pyzmq = "^26.0.3"
regex = "^2024.7.24"
requests = "^2.32.3"
safetensors = "0.4.3"
sentencepiece = "^0.2.0"
six = "^1.16.0"
stack-data = "^0.6.3"
sympy = "^1.13.1"
tokenizers = "^0.19.1"
torch = "^2.4.0"
torchaudio = "^2.4.0"
torchvision = "^0.19.0"
tornado = "^6.4.1"
tqdm = "^4.66.4"
traitlets = "^5.14.3"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.2"
wcwidth = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
